# OpenGL

./: CMakeLists.txt  README.md
src/cpp/: event-handlers.cpp  examples.cpp  g.cpp  main.cpp  primitive.cpp  shader-program.cpp  texture.cpp  util.cpp  vec.cpp  vec.tpp
src/headers/: event-handlers.h  examples.h  primitive.h  shader-program.h  texture.h  util.h  vec.h
src/shaders/: gradient.frag.glsl  gradient.vert.glsl  texture.frag.glsl  texture.vert.glsl  uniform-color.frag.glsl
